# OpenCV_GLAssignment

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/opencv_gl_assignment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opencv_gl_assignment/: MainActivity.kt  SplashActivity.kt
app/src/main/java/com/example/opencv_gl_assignment/gl/: GLRenderer.kt
app/src/main/java/com/example/opencv_gl_assignment/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: capture_button.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/opencv_gl_assignment/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: package-lock.json  package.json  server.js  tsconfig.json
web/src/: index.ts
